# PIXEL

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt
include/: engine.h
src/: CMakeLists.txt
src/core/: engine_placeholder.cpp
